[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "name-resolver-mcp"
version = "0.1.0"
description = "MCP server for Name Resolution API"
authors = [{name = "Claude", email = "claude@anthropic.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
name-resolver-mcp = "name_resolver_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["name_resolver_mcp"]