[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "node-resolver-mcp"
version = "0.1.0"
description = "MCP server for orchestrating node resolution, normalization, and type finding across Translator services"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chris Bizon"}]
requires-python = ">=3.10"
keywords = ["mcp", "biomedical", "translator", "biolink", "normalization", "resolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.24.0",
    "bmt>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/cbizon/RoboMCP"
Repository = "https://github.com/cbizon/RoboMCP"
Issues = "https://github.com/cbizon/RoboMCP/issues"

[project.scripts]
node-resolver-mcp = "node_resolver_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["node_resolver_mcp"]
