[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodenormalizer-mcp"
version = "0.1.0"
description = "MCP server for Node Normalization API"
authors = [{name = "Claude", email = "claude@anthropic.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
nodenormalizer-mcp = "nodenormalizer_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["nodenormalizer_mcp"]